third_party/rust/paste/tests/ui/unexpected-punct.stderr
error: unexpected punct
 --> tests/ui/unexpected-punct.rs:4:12
  |
4 |     fn [<a + b>]() {}
  |            ^
