third_party/rust/paste/tests/ui/unexpected-punct.rs
paste::item! {
    fn [<a + b>]() {}
}

fn main() {}
